--- a/proj03/CanvasPaint.css
+++ b/proj03/CanvasPaint.css
@@ -62,6 +62,18 @@ body {
     -moz-box-shadow:2px 2px 2px #666;
 }
 
+.toolbarCell:hover {
+    box-shadow: inset 1px 1px 1px #666;
+    -webkit-box-shadow: inset 1px 1px 1px #666;
+    -moz-box-shadow: inset 1px 1px 1px #666;
+}
+
+.toolbarCell:active {
+    box-shadow: inset 3px 3px 3px #666;
+    -webkit-box-shadow: inset 3px 3px 3px #666;
+    -moz-box-shadow: inset 3px 3px 3px #666;
+}
+
 #markerButton { 
     background: url(http://cs.calvin.edu/curriculum/cs/352/files/img/paintbrush.png) no-repeat center center; 
 }
@@ -86,7 +98,7 @@ body {
 #widthSlider {
     position:relative;
     width:35px;
-    top:16px;
+    top:-14px;
     left:-4pt;
 }
 
@@ -170,4 +182,10 @@ body {
     position:relative;
     top:-12pt;
     left:12pt;
+}
+
+#sliderCanvas {
+    position:relative;
+    left:-6pt;
+    top:-6pt;
 }
